// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown displays the error message 1`] = `
<Dropdown
  errorMessage="error message"
  hasError={false}
  label="label goes here"
  required={false}
>
  <InputLabel
    htmlFor="component-unique-id-9"
    label="label goes here"
    required={false}
  >
    <label
      className="usa-label"
      htmlFor="component-unique-id-9"
      id="component-unique-id-9-label"
    >
      label goes here
    </label>
  </InputLabel>
  <span
    className="usa-error-message"
    role="alert"
  >
    error message
  </span>
  <select
    className="usa-select"
    id="component-unique-id-9"
    onChange={[Function]}
    required={false}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select ...
    </option>
    <option
      value="value1"
    >
      Option A
    </option>
    <option
      value="value2"
    >
      Option B
    </option>
    <option
      value="value3"
    >
      Option C
    </option>
  </select>
</Dropdown>
`;

exports[`Dropdown displays the error message when present 1`] = `
<Dropdown
  errorMessage="error message"
  hasError={false}
  label="label goes here"
  required={false}
>
  <InputLabel
    htmlFor="component-unique-id-9"
    label="label goes here"
    required={false}
  >
    <label
      className="usa-label"
      htmlFor="component-unique-id-9"
      id="component-unique-id-9-label"
    >
      label goes here
    </label>
  </InputLabel>
  <span
    className="usa-error-message"
    role="alert"
  >
    error message
  </span>
  <select
    className="usa-select"
    id="component-unique-id-9"
    onChange={[Function]}
    required={false}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select ...
    </option>
    <option
      value="value1"
    >
      Option A
    </option>
    <option
      value="value2"
    >
      Option B
    </option>
    <option
      value="value3"
    >
      Option C
    </option>
  </select>
</Dropdown>
`;

exports[`Dropdown should render correctly 1`] = `
<Dropdown
  hasError={false}
  label="label goes here"
  required={false}
>
  <InputLabel
    htmlFor="component-unique-id-0"
    label="label goes here"
    required={false}
  >
    <label
      className="usa-label"
      htmlFor="component-unique-id-0"
      id="component-unique-id-0-label"
    >
      label goes here
    </label>
  </InputLabel>
  <select
    className="usa-select"
    id="component-unique-id-0"
    onChange={[Function]}
    required={false}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select ...
    </option>
    <option
      value="value1"
    >
      Option A
    </option>
    <option
      value="value2"
    >
      Option B
    </option>
    <option
      value="value3"
    >
      Option C
    </option>
  </select>
</Dropdown>
`;
